--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@ modified
 SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -16,11 +17,20 @@ SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
     <application android:label="@string/english_ime_name"
             android:name="theprime.primeboard.latin.App"
             android:icon="@mipmap/ic_launcher"
+
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:allowBackup="true"
             android:defaultToDeviceProtectedStorage="true"
+            tools:replace="android:name"
             android:directBootAware="true">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id" />
+        <meta-data
+            android:name="applovin.sdk.key"
+            android:value="@string/sdk_key_applovin" />
 
         <!-- Services -->
         <service android:name="LatinIME"
