--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,7 +95,7 @@ android {
 
 dependencies {
 
-    implementation(project(":Adsmodul"))
+    implementation("com.github.saputra1337:ModulAdsAdmob:1.0.0")
     // androidx
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
